Release 8.17.4 Date:   GenericSearchResults finalize removed.